<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="button_add_habit">button add item</string>
    <string name="bad_habit_type">Bad</string>
    <string name="good_habit_type">Good</string>
    <string name="low_priority">Low</string>
    <string name="normal_priority">Normal</string>
    <string name="high_priority">High</string>
    <string name="input_habit_name">Input habit name</string>
    <string name="input_habit_description">Input habit description</string>
    <string name="recurrence">You did %1$d out of %2$s in %3$s</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="select_priority">Select priority</string>
    <string name="select_type_of_habit">Select type of habit</string>
    <string name="input_recurrence_number">Number</string>
    <string name="input_recurrence_period">Period in days</string>
    <string name="select_color">Select color</string>
    <string name="input_recurrence_of_habit">Input recurrence of habit</string>
    <string name="invalid_input">Invalid input</string>
    <string name="not_all_required_fields_are_filled">Not all required fields are filled</string>
    <string name="current_color">Current color</string>
    <string name="rgb_color">RGB (%1$d, %2$d, %3$d)</string>
    <string name="hsv_color">HSV (%1$d, %2$d, %3$d)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plural_ending">s</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="about">About</string>
    <string name="habit_list">Habit List</string>
    <string name="habit_item">Habit Item</string>
    <string name="version_name">Version name: %1$s</string>
    <string name="version_code">Version code: %1$d</string>
    <string name="app_description">This application will help you form good habits and get rid of bad ones.</string>
    <string name="habits">Habits</string>
    <string name="all_habits">All habits</string>
    <string name="good_habits">Good habits</string>
    <string name="bad_habits">Bad habits</string>
    <string name="filters_and_sort">Filters and sort</string>
    <string name="search_by_name">Search by name</string>
    <string name="order_by">Order by:</string>
    <string name="order_by_creation">creation</string>
    <string name="order_by_name">name</string>
    <string name="order_by_priority">priority</string>
    <string name="done">Done</string>
    <string name="habit_already_exists">A habit with name %1$s already exists</string>
    <string name="sql_error">SQL error: %1$s</string>
    <string name="cloud_error">Network error: %1$s%2$s</string>
    <string name="deleting_habits_error">Deleting habits failed%1$s</string>
    <string name="deleting_habit_error">Deleting habit failed%1$s</string>
    <string name="worth_doing_more_times">It\'s worth doing %1$s</string>
    <string name="you_are_allowed_more_times">You\'re allowed to do it %1$s</string>
    <string name="you_are_breathtaking">You are breathtaking!</string>
    <string name="stop_doing_it">Stop doing it!</string>
    <string name="undo">Undo</string>
    <string name="upload_habits_to_server">Upload habits to the server</string>
    <string name="download_habits_from_server">Download habits from the server</string>
    <string name="avatar">Avatar</string>
    <string name="sync_is_done">Sync is done</string>
    <string name="cloud_and_db_are_equals">All habits are synchronized with the server</string>
    <string name="cloud_and_db_are_not_equals">Not all of your habits are in sync with the server.\nPlease perform a sync.\n\nAll data will be overwritten!</string>
    <string name="delete_all_habits_from_the_device">Delete all habits from the device</string>
    <string name="delete_all_habits_from_the_server">Delete all habits from the server</string>
    <string name="download_from_the_server">Download from the server</string>
    <string name="upload_to_the_server">Upload to the server</string>
    <string name="cancel">Cancel</string>
    <string name="compare_device_habits_with_the_server">Compare device habits with the server</string>

    <plurals name="plurals_times">
        <item quantity="one">%d time</item>
        <item quantity="other">%d times</item>
    </plurals>
    <plurals name="plurals_more_times">
        <item quantity="one">one more time</item>
        <item quantity="other">%d more times</item>
    </plurals>
    <plurals name="plurals_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

</resources>
