<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.HabitListPagerFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/teal_200"
        app:tabIndicatorHeight="4dp"
        app:tabMode="scrollable" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_fragment" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="46dp"
            android:backgroundTint="@color/purple_200"
            android:clickable="true"
            android:contentDescription="@string/button_add_habit"
            android:focusable="true"
            app:layout_anchor="@id/bottom_sheet"
            app:layout_anchorGravity="top|end"
            app:srcCompat="@drawable/ic_add" />

        <FrameLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_bottom_sheet_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/filters_and_sort"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tied_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/search_in_habits"
                    android:inputType="text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_bottom_sheet_title" />

                <TextView
                    android:id="@+id/tv_order_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/order_by"

                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tied_search" />

                <Button
                    android:id="@+id/btn_name_asc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@drawable/button_bg_color"
                    android:drawableEnd="@drawable/ic_baseline_south_20"
                    android:text="@string/order_by_name"
                    android:textAllCaps="false"
                    android:textColor="@drawable/button_text_color"
                    app:layout_constraintEnd_toStartOf="@id/btn_name_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_order_by" />

                <Button
                    android:id="@+id/btn_name_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@drawable/button_bg_color"
                    android:drawableEnd="@drawable/ic_baseline_north_20"
                    android:text="@string/order_by_name"
                    android:textAllCaps="false"
                    android:textColor="@drawable/button_text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_name_asc"
                    app:layout_constraintTop_toBottomOf="@id/tv_order_by" />

                <Button
                    android:id="@+id/btn_creation_asc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@drawable/button_bg_color"
                    android:drawableEnd="@drawable/ic_baseline_south_20"
                    android:text="@string/order_by_creation"
                    android:textAllCaps="false"
                    android:textColor="@drawable/button_text_color"
                    app:layout_constraintEnd_toStartOf="@id/btn_creation_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_name_asc" />

                <Button
                    android:id="@+id/btn_creation_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@drawable/button_bg_color"
                    android:drawableEnd="@drawable/ic_baseline_north_20"
                    android:text="@string/order_by_creation"
                    android:textAllCaps="false"
                    android:textColor="@drawable/button_text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_creation_asc"
                    app:layout_constraintTop_toBottomOf="@id/btn_name_asc" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>